--- a/css/index.css
+++ b/css/index.css
@@ -1,36 +1,27 @@
 body, html {
     height: 100%;
     scroll-behavior: smooth;
+    background-color: aquamarine;
 }
 
 
 /* Style page content */
 .container {
-  margin: 0px 10px 0px 200px; 
-  padding: 0px 10px;
+  margin: 20px auto;
+  padding: 20px 20px;
+  width: 900px;
+  background-color: #fcfcfc;
+  color: #212121;
 } 
 
-@media screen and (max-width: 800px) {
-  .container {margin: 0px 10px 0px 10px}; 
+
+@media screen and (max-width: 900px) {
+  .container {
+    margin: 0px;
+    max-width: 100%;
+  }; 
 } 
 
-@media screen and (min-width: 800px) {
-  .label-box {
-    display: none;
-  }
-  [type="checkbox"]:not(:checked) ~ .side-nav {
-      display: initial;
-      left: 0px;
-      right: auto;
-      padding-top: 25px;
-  }
-  [type="checkbox"]:checked ~ .side-nav {
-      display: initial;
-  }
-  .side-nav {
-    display: initial;
-  }
-} 
 
 footer { 
   margin-top: 15px;
