--- a/css/index.css
+++ b/css/index.css
@@ -27,10 +27,18 @@ body, html {
   background-color: rgba(255, 255, 255, 0.95);
 }
 
+.row-contacts {
+  padding: 15px;
+}
+
 .main-heading {
   margin: 0;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.95);
+} 
+
+.fa-mobile-alt {
+  padding-left: 8px;
 }
 
 h1 {
