--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,13 @@ body, html {
 }
 
 .row-contacts {
+  margin: 0;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.95);
   padding: 15px;
+} 
+.row-contacts-sub {
+  padding: 10px 0px;
 }
 
 .main-heading {
